Hide scrollbar and fix sticky navbar on top

--- a/profile/src/index.css
+++ b/profile/src/index.css
@@ -9,6 +9,17 @@
   }
 }
 
+/* Hide scrollbar but keep functionality */
+html::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 /* Smooth scrolling for anchor navigation */
 html {
   scroll-behavior: smooth;
